--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -51,3 +51,7 @@
     box-shadow: 0 0 0 2px var(--casumo-purple);
   }
 }
+
+.bg-page-pattern {
+  background-image: url('/card-background-shape.svg');
+}
